# zhang-gui-zhi-ku

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.backend-cuda  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  smoke_report.json  smoke_test_eval.py
.agentignore/: smallprojectprocess.md
.codojo/: manifest.json  notebook.md  open-questions.md  schedule.md  task.md
1.笔记/: 01【掌柜智库】项目简介.md  02【掌柜智库】环境准备.md  03【掌柜智库】【导入】骨架代码.md  04【掌柜智库】【导入】入口节点.md  05【掌柜智库】【导入】PDF转Markdown节点.md  06【掌柜智库】【导入】MD图片处理节点.md  07【掌柜智库】【导入】文档切片.md  08【掌柜智库】【导入】主体识别.md  09【掌柜智库】【导入】向量化.md  10【掌柜智库】【导入】存入 Milvus.md  11【掌柜智库】【检索】骨架代码.md  12【掌柜智库】【检索】产品确认.md  13【掌柜智库】【检索】搜索向量库.md  14【掌柜智库】【检索】假设性文档向量搜索.md  15【掌柜智库】【检索】网络搜索.md  16【掌柜智库】【检索】结果融合重排.md  17【掌柜智库】【检索】Rerank重排序.md  18【掌柜智库】【Web服务】.md  19【掌柜智库】【API接口和前端页面】.md  20【掌柜智库】【检索】答案输出.md
1.笔记/.claude/: settings.local.json
1.笔记/.codojo/: manifest.json
apps/backend/: main.py
apps/backend/core/: config.py
apps/backend/eval/: README.md  __init__.py  evaluate.py  metrics.py  queries.yaml  queries_real.yaml
apps/backend/routers/: ask.py  upload.py
apps/backend/services/: chunker.py  embedder.py  graph.py  import_workflow.py  llm.py  milvus_client.py  mineru_client.py  recognizer.py  reranker.py  retriever.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_ask_router.py  test_import_workflow.py  test_real_pdf_data.py  test_upload_router.py
apps/backend/tests/unit/: test_chunker.py  test_embedder.py  test_evaluate.py  test_evaluate_rerank.py  test_graph.py  test_graph_rag.py  test_graph_rerank.py  test_hyde.py  test_milvus_client.py  test_mineru_client.py  (+3 more)
apps/frontend/: index.html  main.js  progress.js  style.css
docs/: baseline-1.md  changelog.md  e2e-test-report.md  feature-list.md  page-flow.md  prd.md  project-brief.md  tech-data.md
docs/adr/: 004-hyde-rerank-toggles.md  005-worktree-isolation.md  006-e2e-integration-test.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/issue/: mvp.md
docs/specs/: p1-delete-batch-progress.md
drawio/: .$1.2 Pydantic Schema 与依赖注入.drawio.bkp  1.2 Pydantic Schema 与依赖注入.drawio  day01.drawio  day02.drawio  掌柜智库系统架构.drawio  架构图.drawio
scripts/: add_dep.sh  debug_chunker.py  mineru_grep.py  parse_mineru_docs.py  run_e2e.py  run_tests.sh  setup_test_env.sh
src/processor/import_processor/: base.py  state.py
src/tool/: logger.py
test/: 01_dataclass_practice.py  02_exceptions_practice.py  03_pydantic_practice.py  04_state_practice.py  05_basenode_practice.py  06_graph_compile_practice.py  07_full_pipeline_practice.py  08_entry_pdf_practice.py  09_md_img_practice.py  10_document_split_practice.py  11_rrf_rerank_practice.py
tests/frontend/: test_progress.mjs
