[project]
name = "zhang-gui-zhi-ku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.138.1",
    "grandalf>=0.8",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "minio>=7.2.20",
    "numpy>=2.5.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
