[project]
name = "zhang-gui-zhi-ku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.138.1",
    "flagembedding>=1.3.0",
    "grandalf>=0.8",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "minio>=7.2.20",
    "numpy>=2.5.0",
    "pymongo>=4.17.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.32",
    "pymilvus>=3.0.0",
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
]

# CUDA-enabled torch (cu124) — RTX 3050 driver supports CUDA 13.0, backward-compatible with cu124
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
markers = [
    "unit: 单元测试, 纯函数, ms 级, CI 必跑",
    "integration: 集成测试, mock 外部边界, TestClient, CI 必跑",
]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
